--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,8 @@ bin/
 obj/
 
 # Ignorar archivos de configuración específicos del entorno
-appsettings.json
-appsettings.*.json
+#appsettings.json
+#appsettings.*.json
 
 # Ignorar archivos y directorios de Visual Studio
 .vs/
