--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -7,7 +7,7 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-      "ServerDB_Local": "Server=localhost,8002;Database=ContosoPizza;Uid=sa;Pwd=<YourStrong@Passw0rd>;TrustServerCertificate=True",
-      "ServerDB_Docker": "Server=db;Database=ContosoPizza;Uid=sa;Pwd=<YourStrong@Passw0rd>;TrustServerCertificate=True"
+      "ServerDB_Local": "Server=localhost,8002;Database=Teatro;Uid=sa;Pwd=<YourStrong@Passw0rd>;TrustServerCertificate=True",
+      "ServerDB_Docker": "Server=db;Database=Teatro;Uid=sa;Pwd=<YourStrong@Passw0rd>;TrustServerCertificate=True"
     }
   }
