Añadidos logs para obras

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,8 @@ services:
       - db
     environment:
       - DOCKER_CONTAINER=true
+    volumes:
+      - ./Api/logs:/app/logs
 
   # descomentar cuando este completo
   # web:
