--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -8,7 +8,6 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-      "ServerDB_Local": "Server=localhost,8002;Database=Teatro;Uid=sa;Pwd=<YourStrong@Passw0rd>;TrustServerCertificate=True",
-      "ServerDB_Docker": "Server=db;Database=Teatro;Uid=sa;Pwd=<YourStrong@Passw0rd>;TrustServerCertificate=True"
+      "ServerDB": "Server=basedatosteatro.cqjufqnkprpb.us-east-1.rds.amazonaws.com;Database=TeatroDB;Uid=sa;Pwd=diego123;TrustServerCertificate=True"
     }
   }
